<resources>
    <string name="item_name">Item Name</string>
    <string name="store_address">Store Address</string>
    <string name="quantity">Quantity</string>
    <string name="add_item">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="items_button">Items</string>
    <string name="store_button">Stores</string>
    <string name="map_button">Map</string>
    <string name="coupons_button">Coupons</string>
    <string name="note_pad_label">Note Pad:</string>
    <string name="add_note_button">Add Note</string>
    <string name="content_descrpition_item_logo">image of item</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered</string>
    <string name="login_next">Login</string>
    <string name="store_add">+ Add Store</string>
    <string name="store_name">Store Name</string>
    <string name="Store">Name of Store</string>
    <string name="StoreImage">Store Image</string>
    <string name="store_coupon">Add Coupon</string>
    <string name="Coupon_exp">Coupon</string>
    <string name="Coupon_expires">Expiration Date:</string>
    <string name="theme_background">Background Theme Green</string>
    <string name="done">Done</string>
    <string name="click_to_add_image">Click To Add Image</string>
    <string name="permissions_message">Please enable camera and gallery permissions in settings to add image.</string>
    <string name="addNotes">Additional Notes</string>
    <string name="IsFavorite">Is Favorite</string>
    <string name="ExpireDate">Expiration Date</string>
    <string name="ExpirationDate">Expires When, no slashes or spaces</string>
    <string name="credits_title">Credits:</string>
    <string name="stacey" translatable="false">Stacey Ashbrook</string>
    <string name="chloe" translatable="false">Chloe Baird</string>
    <string name="clarissa" translatable="false">Clarissa Gutierrez</string>
    <string name="return_button">Return</string>
    <string name="stores_near_me">Stores Near Me:</string>
    <string name="notes_title">Notes Title...</string>
    <string name="notes_contents">Notes Contents...</string>
    <string name="shopping_organizer">Shopping Organizer</string>/>
    <string name="item_description">an item</string>
    <string name="default_text">TEXT</string>
    <string name="Add_All">Add All</string>
    <string name="ShoppingOrganizer">Shopping Organizer</string>
    <string name="delete_text">Delete</string>
    <string name="add_store">Click to Set Store Image</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add_store_toast">All fields (excluding image) must be provided to add an store to the list.</string>
    <string name="add_item_toast">All fields (excluding image) must be provided to add an item to the list.</string>
    <string name="item_successful_added">Item Successfully Added</string>
    <string name="store_successful_added">Store Successfully Added</string>
    <string name="image_view_content">image view content</string>
    <string name="sample_text">sample text</string>
    <string name="Location">Location</string>
    <string name="coupon_Add_List">Input Here Additional Notes, Collect upon completion.</string>
    <string name="add_coupon">Click to Set Coupon Image</string>
    <string name="setCouponListing">Set Coupon Listing, Favorite, List</string>
    <string name="Collect">Collect</string>
    <string name="app_name">Shopping Organizer</string>

</resources>
