<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Clarissa Gutierrez-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/itemsButton"
        android:layout_width="96dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGreen"
        android:fontFamily="sans-serif-light"
        android:onClick="viewItems"
        android:text="@string/items_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/storesButton"
        app:layout_constraintTop_toTopOf="@+id/storesButton" />

    <Button
        android:id="@+id/storesButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGreen"
        android:fontFamily="sans-serif-light"
        android:onClick="viewStores"
        android:text="@string/store_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorGreen"
        android:fontFamily="sans-serif-light"
        android:onClick="viewMap"
        android:text="@string/map_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storesButton" />

    <Button
        android:id="@+id/couponsButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorGreen"
        android:fontFamily="sans-serif-light"
        android:onClick="viewCoupons"
        android:text="@string/coupons_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toEndOf="@+id/storesButton"
        app:layout_constraintTop_toTopOf="@+id/storesButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/note_pad_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyButton" />

    <ListView
        android:id="@+id/notesListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/doneButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="117dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorGreen"
        android:fontFamily="sans-serif-light"
        android:onClick="addNote"
        android:text="@string/add_note_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:onClick="viewCredits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/credits_vector" />
</android.support.constraint.ConstraintLayout>